# hydra

./: .gitignore  README.md  proposed_HYDRA.ipynb  pyproject.toml  requirements.txt  xrf55_baseline.ipynb  zhang_baseline.ipynb
configs/: proposed_hydra.yaml  xrf55_baseline.yaml  zhang_baseline.yaml
scripts/: evaluate_cscs_fusion.py  run_experiment.py
src/hydra/: __init__.py
src/hydra/experiments/: __init__.py  proposed_hydra.py  xrf55_baseline.py  zhang_baseline.py
