[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hydra"
version = "0.1.0"
description = "HYDRA reproducibility code for multimodal RF sensing under missing modalities"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy==2.4.3",
  "torch==2.10.0",
  "mamba-ssm==2.3.1",
  "causal-conv1d==1.6.1",
  "PyYAML>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]
